add Texinfo manual stub for Structured
* example-vms/structured/doc/structured.texi: New file.

* Makefile.am (info_TEXINFOS): Add += definition.
(example_vms_structured_doc_structured_TEXINFOS): Define.
($(srcdir)/example-vms/structured/doc/gpl.texi): Define.
($(srcdir)/example-vms/structured/doc/fdl.texi): Define.

* example-build-systems/bootstrap: Whitespace change.  Copy new Texinfo file
and its included files into example source directories.
* example-build-systems/structured-simple/Makefile.am (info_TEXINFOS)
(doc_structured_TEXINFOS): Define.
* example-build-systems/structured-with-library/Makefile.am (info_TEXINFOS)
(doc_structured_TEXINFOS): Define.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1414,6 +1414,18 @@ else # ! JITTER_CAN_REBUILD_MAN_PAGES
 endif
 dist_man1_MANS += $(srcdir)/doc/structured.1
 
+# Structured documentation.
+info_TEXINFOS += \
+  example-vms/structured/doc/structured.texi
+example_vms_structured_doc_structured_TEXINFOS = \
+  $(srcdir)/example-vms/structured/doc/gpl.texi \
+  $(srcdir)/example-vms/structured/doc/fdl.texi
+# This is an easy way of not distributing two copies of the same two files.
+$(srcdir)/example-vms/structured/doc/gpl.texi: doc/gpl.texi
+	cp "$<" "$@"
+$(srcdir)/example-vms/structured/doc/fdl.texi: doc/fdl.texi
+	cp "$<" "$@"
+
 
 # Jittery Lisp example.
 # ################################################################
