cleanup scripts/emulator, factor
Generate scripts/emulator using M4sh before config.status , like
bin/jitter-config .  Factor.  Add GNU-style command-line options --version and
--help, printing useful information according to configuration data.

* bin/jitter-config.in.m4sh (script_name, help_section_indentation)
(help, suppress_redundant_spaces, main program): Change definition.
(prefix, exec_prefix, datarootdir, includedir, flagdir, templatedir, my_echo)
(echo_and_exit, fail_usage, fail_semantic-version): Move to...

* m4-utility/jitter-script.m4sh: ...Here.

* scripts/emulator.in: The file is now generated: replace with...
* scripts/emulator.in.m4sh: ...This.  New implementation, replying on
m4-utility/jitter-script.m4sh.

* Makefile.am (noinst_SCRIPTS): New variable.
(bin_SCRIPTS): Change comment.
(scripts/emulator.in): New rule.
(EXTRA_DIST): Distribute new source scripts/emulator.in.m4sh.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -53,6 +53,7 @@ unm4sh_all ()
   # Generate FILE.in from each FILE.in.m4sh .
   unm4sh "bin/jitter-config.in.m4sh"
   unm4sh "scripts/generate-fast-branches.in.m4sh"
+  unm4sh "scripts/emulator.in.m4sh"
 }
 
 # Given a .in.m4sh file, build a .in file with the same extension by expanding
